--- a/rate-repository-app/package.json
+++ b/rate-repository-app/package.json
@@ -30,6 +30,7 @@
     "@testing-library/dom": "^9.3.3",
     "dotenv": "^16.3.1",
     "expo": "~46.0.21",
+    "expo-linking": "^6.0.0",
     "expo-status-bar": "~1.4.0",
     "formik": "^2.4.5",
     "graphql": "^15.8.0",
