--- a/rate-repository-app/package.json
+++ b/rate-repository-app/package.json
@@ -39,6 +39,9 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.9",
+    "react-native-paper": "^5.10.6",
+    "react-native-safe-area-context": "^4.7.2",
+    "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.18.7",
     "react-router-dom": "^6.16.0",
     "react-router-native": "^6.16.0",
