--- a/rate-repository-app/package.json
+++ b/rate-repository-app/package.json
@@ -45,6 +45,7 @@
     "react-native-web": "~0.18.7",
     "react-router-dom": "^6.16.0",
     "react-router-native": "^6.16.0",
+    "use-debounce": "^9.0.4",
     "yup": "^1.3.2"
   },
   "devDependencies": {
